--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
  {
   "timeZone": "Asia/Jakarta",
-  "language": "en",
+  "language": "id",
   "ownerNumber": ["", ""],
   "readStatus": false,
   "readMessage": false,
